# AstroChemNet

./: .gitignore  .kilocodeignore  CLAUDE.md  README_CONFIG.md  Readme.md  agents.md  benchmark.py  cases.md  debug.md  env.sh  knn-report.md  plan.md  preprocess.py  pyproject.toml  requirements.txt  research.md  run.py  run_tacc.sh  train.py  training.md
.claude/: settings.local.json
.kilocode/: .kilocodeignore
.kilocode/rules/: formatting.md  restricted_files.md
configs/: autoencoder.py  config.yaml  config_emulator.yaml  emulator.py  general.py  preprocess.yaml
configs/components/: autoencoder_grav.yaml  emulator_grav.yaml
configs/data/: carbox_grav.yaml  grav.yaml
configs/datasets/: grav.yaml
configs/models/: autoencoder.yaml  emulator.yaml
data/: README.md
docs/: 3d_tensor_data_intake_updates.md  KNN_Baseline_Report.md  PCA_Preprocessing_Report.md  RESTRUCTURING_PLAN_V2.md  carbox_gravitational_collapse.md  missing_for_autoencoder.md  restructuring_changes.md
nn_architectures/: autoencoder.py  emulator.py
plans/: dataset-config-migration.md  plan.md  preprocessing_restructuring.md
research/: Physical Parameter Vector Search Model.ipynb  gow17_conservation.ipynb  gow_conservation.ipynb
scripts/: Autoencoder Inference Subset.ipynb  Error Analysis Emulator.ipynb  Error Analysis Latent Autoregressive.ipynb  compare_runs.py  general.py  preprocessing.py  species.txt  trajectories.ipynb
src/: __init__.py  analysis.py  benchmark.py  cli.py  config_schemas.py  data_loading.py  data_processing.py  inference.py  loss.py  preprocess.py  train.py  trainer.py  training.py  utils.py
src/cli/: preprocess.py  (+1 more)
tests/: test_autoregressive.py  test_latent_ode.py
utils/: initial_abundances.npy  latents_minmax.npy  molecular_matrix.npy  stoichiometric_matrix.npy
vibecode/: analyze_tracers.py  generate_filtered_plot.py  generate_phys_tsne_plot.py  generate_three_plots.py  generate_tsne_plots.py  generate_validation_tsne_comparison.py  nearest_neighbor_predictor.py  nearest_neighbor_predictor_total.py  pca_tsne_species.py  phys_tsne_data.csv  plot_three_compact.py  plot_training_val_barebones.py  save_phys_tsne_data.py  save_train_val_indices.py  save_tsne_data.py  save_tsne_data_and_plot.py  tsne_data.csv  tsne_ground_truth_validation.csv  tsne_latent.py  tsne_predicted_validation.csv  tsne_species.py
weights/: autoencoder.pth  autoencoder10.json  autoencoderlog.pth  mlp.pth
(+194 files in other folders)
