[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["AstroChemNet"]
package-dir = {"" = "src"}

[project]
name = "AstroChemNet"
version = "0.1.0"
description = "A surrogate model for UCLCHEM."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["hydra-core>=1.3.0"]

[project.scripts]
astrochemnet-preprocess = "AstroChemNet.cli.preprocess:main"
astrochemnet-train-autoencoder = "AstroChemNet.cli.train_autoencoder:main"
astrochemnet-train-emulator = "AstroChemNet.cli.train_emulator:main"

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E501", "D105", "D107", "F401"]

[tool.ruff.lint.per-file-ignores]
# Ignore import-order warnings and undefined variables in notebooks
"*.ipynb" = ["E402", "F821"]
# Ignore import-order warnings in analysis scripts
"scripts/analysis/*.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"
